@@ -62,7 +62,7 @@ struct vf
   uint32_t design_size; /* A fixword-pts quantity */
   int num_dev_fonts, max_dev_fonts;
   struct font_def *dev_fonts;
-  unsigned char **ch_pkt;
+  unsigned char **ch_pkt, message_flag;
   uint32_t *pkt_len;
   unsigned num_chars;
 };
@@ -100,6 +100,7 @@ static void resize_vf_fonts(int size)
       vf_fonts[i].num_dev_fonts = 0;
       vf_fonts[i].max_dev_fonts = 0;
       vf_fonts[i].dev_fonts = NULL;
+      vf_fonts[i].message_flag = 0;
     }
     max_vf_fonts = size;
   }
@@ -416,7 +417,13 @@ void vf_set_char(int32_t ch, int vf_font)
       if (tfm_is_jfm(vf_fonts[vf_font].dev_fonts[0].tfm_id) &&
           ch < 0x1000000 && dpx_conf.compat_mode != dpx_mode_xdv_mode) {
         /* fallback multibyte character for (u)pTeX */
-        if (dpx_conf.verbose_level > 0)
+        if (dpx_conf.verbose_level == 1)
+	  if (vf_fonts[vf_font].message_flag == 0) {
+	    WARN ("Fallback multibyte character in virtual font: VF:%s to TFM:%s",
+	      vf_fonts[vf_font].tex_name, vf_fonts[vf_font].dev_fonts[0].name);
+	    vf_fonts[vf_font].message_flag = 1;
+          }
+        if (dpx_conf.verbose_level > 1)
 	  WARN ("Fallback multibyte character in virtual font: VF:%s char=0x%06x(%d) to TFM:%s",
 	    vf_fonts[vf_font].tex_name, ch, ch, vf_fonts[vf_font].dev_fonts[0].name);
         dvi_set (ch);
