@@ -1,3 +1,8 @@
+2020-05-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* vf.c: reduce message by '-v' less than by '-vv' for
+	fallback of virtual fonts.
+
 2020-05-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* dvipdfmx-upjf.test, Makefile.{am,in},
